2006-05-19  Per Bothner  <per@bothner.com>

	* lists.scm (car, cdr, define-cxr): Use name: lambda keyword to set
	name, so we don't have to use less-efficient define kludge.

2006-05-06  Per Bothner  <per@bothner.com>

	* files.scm (make-temporary-file): Reimplement using new method
	in gnu.kawa.functions.FileUtils.

	* numbers.scm (quantity->number, quantity->unit, make-quantity):
	New functions, converted from Java classes in kawa.standard.
	* strings.scm (string): Likewise.

	* misc.scm (test-begin): Update test-%begin -> %test-begin.

2006-05-01  Per Bothner  <per@bothner.com>

	* ports.scm (open-output-string, get-output-string): Use new compact
	syntax for constructors and method calls.  Also avoids a dependency
	of reflection.scm.
	* strings.scm (string-append/shared): Likewise for array accesses.

2006-04-14  Per Bothner  <per@bothner.com>

	* lists.scm (define-cxr): New non-exported helper macro.
	(caar, cadr, cdar, cddr,
	caaar, caadr, cadar, caddr, cdaar, cdadr, cddar, cdddr
	caaaar, caaadr, caadar, caaddr, cadaar, cadadr, caddar, cadddr
	cdaaar, cdaadr, cdadar, cdaddr, cddaar, cddadr, cdddar, cddddr):
	Use define-cxr to define functions.

2006-03-03  Per Bothner  <per@bothner.com>

	* numbers.scm (duration): New function.

2006-02-14  Per Bothner  <per@bothner.com>

	* prim_syntax.scm (define-syntax, define, define-private,
	define-constant): Recognize "compound names" - ($lookup$ PART1 'PART2),
	which appeared as PART1:PART2 is the source code.
	(define_for_syntax): Just define in terms of define, for now.

2006-02-10  Per Bothner  <per@bothner.com>

	* number.scm (max, min, gcd, lcm, logand, logior, logxor):
	Use more convenient array:length syntax.

	* numbers.scm (number->string): Use new Arithmetic:toString function,
	which also support java.lang.Long, gnu.math.BigDecimal, etc.

2006-02-07  Per Bothner  <per@bothner.com>

	* numbers.scm (integer?, max, min, gcd, lcm, logand, logior, logxor):